fix font spacing

--- a/styling/main.css
+++ b/styling/main.css
@@ -18,6 +18,7 @@ body {
     font-size: 65px;
     color: #ececec;
     text-align: center;
+    letter-spacing: 1px;
 }
 
 
